better imports main assets

--- a/src/common/css/main.scss
+++ b/src/common/css/main.scss
@@ -1,8 +1,14 @@
 
+@import "../../../node_modules/normalize.css/normalize.css";
+
 /**
- * === CUSTOM CSS ===
+ * === MAIN CSS ===
  */
 
 body {
+    color: red;
+}
+
+h1 {
     color: red;
 }
